fix(layout): add vertical scroll always visible, remove scrollbar offset hack

--- a/style/base/_page.scss
+++ b/style/base/_page.scss
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 .docs-body {
   min-width: 320px;
 }
