--- a/style/layout/_sidebar.scss
+++ b/style/layout/_sidebar.scss
@@ -1,6 +1,4 @@
 .docs-sidebar {
-  padding-left: calc(100vw - 100%);
-
   &--open {
     display: block;
   }
