--- a/style/layout/_topbar.scss
+++ b/style/layout/_topbar.scss
@@ -19,7 +19,7 @@
     @include desktop {
       max-width: 764px;
       margin-left: 260px;
-      padding-left: calc(50% - 764px / 2 - 260px + .5 * (100vw - 100%));
+      padding-left: calc(50% - 764px / 2 - 260px);
       border-bottom: 1px solid $docs-color--black12;
     }
 
