--- a/style/layout/_wrapper.scss
+++ b/style/layout/_wrapper.scss
@@ -8,6 +8,6 @@
 
   @include desktop {
     margin-left: 260px;
-    padding-left: calc(50% - 764px / 2 - 260px + .5 * (100vw - 100%));
+    padding-left: calc(50% - 764px / 2 - 260px);
   }
 }
